--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mansalv&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +11,6 @@
 
   @import "../node_modules/bootstrap/scss/bootstrap.scss";
 
-
   html,
   body {
     color: #fff;
@@ -18,10 +19,10 @@
     // background-repeat: repeat-x, repeat-x;
     // background-position: center bottom, left top;
   }
-
 // a {
 //   color: inherit;
 //   text-decoration: none;
+
 // }
 
 // * {
